# crowd_rpa

./: .gitignore  driver.py  portal_config.yaml  pyproject.toml  settings.py
crowd_rpa/: __init__.py  api.py  driver.py  portal_config.yaml  settings.py
crowd_rpa/cores/: __init__.py  collector_flow.py  extractot_flow.py  flow.py  flow_enum.py  parallel.py  utils.py
crowd_rpa/cores/Vnpt/: constant.py  rpa.py
crowd_rpa/cores/Wininvoice/: constant.py  rpa.py
crowd_rpa/cores/bkav/: constant.py  rpa.py
crowd_rpa/cores/cyberbill/: constant.py  rpa.py
crowd_rpa/cores/digiworld/: constant.py  rpa.py
crowd_rpa/cores/easyinvoice/: constant.py  rpa.py
crowd_rpa/cores/evat/: constant.py  rpa.py
crowd_rpa/cores/express/: constant.py  rpa.py
crowd_rpa/cores/gas_petrolimex/: constant.py  rpa.py
crowd_rpa/cores/haxaco/: constant.py  rpa.py
crowd_rpa/cores/hilo/: constant.py  rpa.py
crowd_rpa/cores/lotte_mart/: constant.py  rpa.py  test_captcha.py
crowd_rpa/cores/misa/: constant.py  rpa.py
crowd_rpa/cores/mobifone/: constant.py  rpa.py
crowd_rpa/cores/nacencomm/: constant.py  rpa.py
crowd_rpa/cores/ngo_gia_phat/: constant.py  rpa.py
crowd_rpa/cores/rosysoft/: constant.py  rpa.py
crowd_rpa/cores/seasoft/: constant.py  rpa.py
crowd_rpa/cores/thai_son/: constant.py  rpa.py
crowd_rpa/cores/thaison/: constant.py  rpa.py
crowd_rpa/cores/the_gioi_di_dong/: constant.py  rpa.py
crowd_rpa/cores/vnpt/: constant.py  rpa.py
crowd_rpa/interfaces/: rpa_interface.py
crowd_rpa/utils/: __init__.py  rpa_util.py
tests/: test.py
(+10 files in other folders)
